--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png"> <!-- Add this line -->
   <script type="text/javascript" src="/abp.js"></script>
-  <title>Promotion App</title>
+  <title>V-Sale</title>
 </head>
 <body>
   <noscript>
