--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="shortcut icon" href="https://minio.vietmap.vn/platform-testing/logo-2.png">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png"> <!-- Add this line -->
   <script type="text/javascript" src="/abp.js"></script>
   <title>V-Sale</title>
